sort.dutchflag.DutchFlagAlgo.scala.error
Erreur de compilation :
DutchFlagAlgo:13: error: not found: value setCouleur
    setCouleur(i-j+1,v)
    ^